fix(frontend): add flex-wrap to language logo
add flex-wrap to language logo in repository-card, so no more overflow
on mobile

--- a/frontend/src/components/repository-card/repository-card.css
+++ b/frontend/src/components/repository-card/repository-card.css
@@ -52,6 +52,7 @@
 
 .repository-card__right-content {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   align-items: center;
 }
